<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">ZombiDeck</string>
    <string name="shuffle_and_start">Shuffle and start</string>
    <string name="draw_a_card">Draw a card</string>
    <string name="danger_level">%1s danger level</string>
    <string name="card_number" translatable="false">#%1$s</string>
    <string name="amount" translatable="false">x%1$d</string>
    <string name="spawn_then_activate">Spawn, then activate</string>
    <string name="one_extra_activation">One extra activation</string>
    <string name="abomination" tools:ignore="MissingTranslation">Abomination</string>
    <string name="previous_card">Previous card</string>
    <string name="shuffle">Shuffle</string>
    <string name="walker">walker</string>
    <string name="runner">runner</string>
    <string name="fatty">fatty</string>
    <string name="rush">%1$s Rush</string>
    <string name="configure_the_deck">Configure the deck</string>
    <string name="tuning_the_difficulty">Tuning the difficulty</string>
    <string name="cards_range">Include cards %1$d to %2$d</string>
    <string name="easy_cards_summary">The easier part of a Zombie invasion. Zombies appear in lower amount, but still benefit from Rush rules. There is no Abomination at Blue Danger Level.</string>
    <string name="hard_cards_summary">The harder part. Zombies come in greater numbers, especially at low Danger Levels. Abominations appear at Blue Danger Level.</string>
    <string name="extra_cards_summary">These are Extra Activations cards. They make the Zombies less predictable and put more pressure on the Survivors.</string>
    <string name="preferences_alert">You must select at least one deck of cards.</string>
    <string name="hobomination">Hobomination</string>
    <string name="abominacop">Abominacop</string>
    <string name="abominawild">Abominawild</string>
    <string name="patient_0" tools:ignore="MissingTranslation">Patient 0</string>
    <string name="hobomination_rule">Survivors cannot perform Combat Actions in the Hobomination\'s Zone.</string>
    <string name="abominacop_rule">The Abominacop goes first in Targeting Priority Order.</string>
    <string name="abominawild_rule">Molotov effects in the Abominawild\'s Zone only kill the Abominawild. Other Actors are not affected and other related game effects are ignored.</string>
    <string name="patient_0_rule">No special rules.</string>
    <string name="draw_an_abomination">Draw an abomination</string>
    <string name="see_abomination">See the abomination</string>
    <string name="blue">blue</string>
    <string name="yellow">yellow</string>
    <string name="orange" tools:ignore="MissingTranslation">orange</string>
    <string name="red">red</string>
    <string name="no_extra_activation">NO extra activation</string>
    <string name="not_important">Not important for accessibility</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="toggle_sound_on_off">Toggle sound on/off</string>
    <string name="decrease_danger_level">Decrease danger level</string>
    <string name="increase_danger_level">Increase danger level</string>
    <string name="expansions">Expansions</string>
    <string name="fort_hendrix">Fort Hendrix</string>
    <string name="urban_legends">Urban Legends</string>
    <string name="app_version_label" translatable="false">v%1$s</string>
    <string name="trejo">TREJO</string>
    <string name="trejo_rule">&lt;b>DO ONE OF THE FOLLOWING:&lt;/b>&lt;br/>&lt;b>1 - Trejobomination is on the board:&lt;/b> 1 extra Activation.&lt;br/>&lt;b>2 - Trejo Walker is on the board:&lt;/b> Turns into a Trejobomination.&lt;br/>&lt;b>3 - No Trejobomination or Trejo Walker is on the board:&lt;/b> Spawn a Trejo Walker.></string>
    <string name="trejo_rush_rule">&lt;b>DO ONE OF THE FOLLOWING:&lt;/b>&lt;br/>&lt;b>1 - Trejobomination is on the board:&lt;/b> 1 extra Activation.&lt;br/>&lt;b>2 - Trejo Walker is on the board:&lt;/b> Turns into a Trejobomination.&lt;br/>&lt;b>3 - No Trejobomination or Trejo Walker is on the board:&lt;/b> Spawn a Trejo Walker, &lt;b>then activate it&lt;/b>.</string>
    <string name="danny_trejo">Danny Trejo</string>
    <string name="abductor">Abductor</string>
    <string name="abductor_rule">- Ignores Dark Zone and Night rules for Line of Sight.\n- At the end of its Activation, remove from the board 1 Survivor it has LoS to (players choose). At the end of its next Activation, return the Survivor to the same Zone. Another Survivor is then abducted (it can be the same one).</string>
    <string name="chupacabra">Chupacabra</string>
    <string name="chupacabra_rule">The Chupacabra cannot be eliminated as long as it is in a Dark Zone.</string>
    <string name="killer_clown">Killer Clown</string>
    <string name="killer_clown_rule">Survivors cannot use the last Skill they earned through Adrenaline (does not apply to Blue Level Skills).</string>
    <string name="sewer_crocodile">Sewer Crocodile</string>
    <string name="sewer_crocodile_rule">- Give this card to a Survivor at random.&lt;br/>- The Sewer Crocodile considers the designated Survivor\'s Zone as its target Zone, ignoring other Survivors.&lt;br/>- The Sewer Crocodile has 2 Actions.</string>
</resources>