package org.anne.zombiedeck.data

enum class Expansion(val prefKey: String) {
    BASE("base"),
    FORT_HENDRIX("fortHendrix"),
    DANNY_TREJO("dannyTrejo"),
    URBAN_LEGENDS("urbanLegends"),
}